# pg2_parcial3

./: .gitignore  LICENSE  README.md  setup.cfg
src/martha_gonzales_pg2_tecba/: __init__.py
src/martha_gonzales_pg2_tecba/core/: __init__.py
src/martha_gonzales_pg2_tecba/validators/: __init__.py
tests/: test_persona.py
