[metadata]
name = martha_gonzales_pg2_tecba
version = 0.0.1
author = Martha Gonzales Chumacero
author_email = martututu651@gmail.com
description = Librería de validación y clase Persona con patrón Builder para PG2 TECBA.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarthaGonzalesChumacero/pg2_parcial3.git
project_urls =
    Bug Tracker = https://github.com/MarthaGonzalesChumacero/pg2_parcial3.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src
